[REFACTOR] Modificado constraintExceptions.
Alterado o método que maneja as constraints exceptions para mostrar só um erro por vez, e adicionando o de Method exception.